--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,13 @@
     "start": "node dist/server.js",
     "test": "DATABASE_URL=\"file:./test.db\" JWT_SECRET=\"test-secret\" vitest run",
     "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev"
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:studio": "prisma studio",
+    "prisma:reset": "prisma migrate reset",
+    "prisma:seed": "ts-node --transpile-only prisma/seed.ts"
+  },
+  "prisma": {
+    "seed": "ts-node --transpile-only prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -36,6 +42,7 @@
     "@types/supertest": "^7.2.0",
     "supertest": "^7.2.2",
     "ts-node-dev": "^2.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "vitest": "^4.0.18"
   }
